--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Riza, Will You Be My Valentine?</title>
+    <title>Padaba taka</title>
     <link rel="stylesheet" href="style.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@700&display=swap');
@@ -12,12 +12,12 @@
 </head>
 <body>
     <div id="landing" class="screen">
-        <h1>Riza, I made something special for you... but first, a little game! ❤️</h1>
+        <h1 class="question-box">Hi Mahal, let's play a little game! hehe ❤️</h1>
         <button onclick="startQuiz()">Start</button>
     </div>
 
     <div id="quiz" class="screen hidden">
-        <div id="question-container"></div>
+        <div id="question-container" class="question-box"></div>
     </div>
 
     <div id="final-question" class="screen hidden">
@@ -28,7 +28,7 @@
 
     <div id="celebration" class="screen hidden">
         <h1>Yay! I knew you’d say yes! 🎉</h1>
-        <p>You make me the happiest guy in the world. Can't wait to spend Valentine’s with you! ❤️</p>
+        <p>Thank you mahaaal. Can't wait to spend Valentine’s with you! Padaba takang maray ❤️</p>
     </div>
     <div id="hearts"></div>
 </body>
