--- a/index.html
+++ b/index.html
@@ -12,24 +12,25 @@
 </head>
 <body>
     <div id="landing" class="screen">
-        <h1 class="question-box">Hi Mahal, let's play a little game! hehe ❤️</h1>
-        <button onclick="startQuiz()">Start</button>
+        <h1 class="white-box">Hi Mahal, let's play a little game! hehe ❤️</h1>
+        <button id="start-btn" onclick="startQuiz()">Start</button>
     </div>
 
     <div id="quiz" class="screen hidden">
-        <div id="question-container" class="question-box"></div>
+        <div id="question-container" class="white-box"></div>
     </div>
 
     <div id="final-question" class="screen hidden">
-        <h1>Riza, Will You Be My Valentine? 💖</h1>
+        <h1 class="white-box">Riza, Will you be my Valentine? 💖</h1>
         <button id="yes-btn" onclick="showCelebration()">Yes</button>
         <button id="no-btn" onclick="avoidClick(this)">No</button>
     </div>
 
     <div id="celebration" class="screen hidden">
-        <h1>Yay! I knew you’d say yes! 🎉</h1>
+        <h1 class="white-box">Yay! I knew you’d say yes! 🎉</h1>
         <p>Thank you mahaaal. Can't wait to spend Valentine’s with you! Padaba takang maray ❤️</p>
     </div>
+
     <div id="hearts"></div>
 </body>
 </html>
